--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 30px;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem;}
+h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; color:rgb(214, 219, 233); margin-top: 1.8rem;}
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
 h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
@@ -199,6 +199,11 @@ label {
   max-width: 550px;
   width: 100%;
   font-family: 'Geneva';
+}
+
+.demo_container {
+  margin-left: -10px;
+  margin-right: 10px;
 }
 
 
@@ -435,7 +440,7 @@ input[type="button"].button-primary:focus {
 }
 
 #bla {
-  margin-left: -13.5px;
+  margin-left: -35px;
 }
 
 .result_slider {
@@ -669,6 +674,20 @@ there.
     text-align: center;
     margin: 0 auto;
   }
+  .demo_container {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  #demo-explanation>div>div>div>div>div>p:nth-child(2),
+  #demo-explanation>div>div>div>div>div>p:nth-child(3),
+  #demo-explanation>div>div>div>div>div>p:nth-child(4),
+  #demo-explanation>div>div>div>div>div>p:nth-child(5),
+  #demo-explanation>div>div>div>div>div>p:nth-child(6),
+  #demo-explanation>div>div>div>div>div>p:nth-child(8) {
+    text-align: justify;
+  }
+  
 
   .button_instruction,
   .button_demo,
@@ -735,6 +754,8 @@ there.
     color: #D1D1D1;
 
   }
+
+
 
   
   .mobile_forms {
