--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -62,7 +62,8 @@ input {
 
 .header Img {
   margin-left: auto;
-  height: 100px;
+  max-height: 100px;
+  max-width: 50%;
 }
 
 .control .Select-control {
