--- a/apps/dash-object-detection/assets/internal.css
+++ b/apps/dash-object-detection/assets/internal.css
@@ -1,311 +1,318 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Raleway');
+@import url("https://fonts.googleapis.com/css?family=Roboto|Raleway");
 
 /* Remove Undo
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ._dash-undo-redo {
-    display: none;
+  display: none;
 }
-
 body {
-    margin: 0 !important;
-    color: #606060 !important;
-    font-family: 'Raleway', sans-serif;
-    background-color: #F9F9F9 !important;
+  margin: 0 !important;
+  color: #606060 !important;
+  font-family: "Raleway", sans-serif;
+  background-color: #f9f9f9 !important;
 }
 
 #top-bar {
-    background-color: #fa4f56;
-    height: 5px;
+  background-color: #fa4f56;
+  height: 5px;
 }
 
 #left-side-column {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    height: calc(100vh - 5px);
-    background-color: #F2F2F2;
-    overflow-y: scroll;
-    margin-left: 0px;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  height: calc(100vh - 5px);
+  background-color: #f2f2f2;
+  overflow-y: scroll;
+  margin-left: 0px;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 1rem 2rem;
 }
 
 #right-side-column {
-    height: calc(100vh - 5px);
-    overflow-y: scroll;
-    margin-left: 1%;
-    display: flex;
-    flex-direction: column;
+  height: calc(100vh - 5px);
+  overflow-y: scroll;
+  margin-left: 1%;
+  display: flex;
+  flex-direction: column;
 }
 
 h4 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 
 p {
-    font-size: 16px;
-    font-weight: 300;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .modal {
-    display: block; /*Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100vw; /* Full width */
-    height: 100vh; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  display: block; /*Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 .markdown-container {
-    width: 60vw;
-    margin: 10% auto;
-    padding: 10px 15px;
-    background-color: #F9F9F9;
-    border-radius: 10px;
+  width: 60vw;
+  margin: 10% auto;
+  padding: 10px 15px;
+  background-color: #f9f9f9;
+  border-radius: 10px;
 }
 
 .close-container {
-    display: inline-block;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .markdown-text {
-    padding: 0px 10px;
+  padding: 0px 10px;
 }
 
-
 .closeButton {
-    padding: 0 15px;
-    font-weight: normal;
-    float: right;
-    font-size: 1.2rem;
-    border:none;
-    height:100%;
+  padding: 0 15px;
+  font-weight: normal;
+  float: right;
+  font-size: 1.2rem;
+  border: none;
+  height: 100%;
 }
 
 .closeButton:hover {
-    color: red !important;
+  color: red !important;
 }
 
 #header-section {
-    width: 88%;
-    margin-top: 2%;
+  width: 88%;
+  margin-top: 2%;
 }
 
 .button:focus {
-    color: #FFFFFF;
-    border-color: #bbb;
+  color: #ffffff;
+  border-color: #bbb;
 }
 
 #learn-more-button {
-    background-color: #fa4f56;
-    color: #FFFFFF;
-    font-size: 13px;
-    height: 30px;
-    font-weight: 500;
-    padding: 5px 25px 30px 25px;
-    line-height: 30px;
-    font-family: 'Raleway', sans-serif;
+  background-color: #fa4f56;
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  padding: 5px 20px;
+  text-transform: none;
+  line-height: 30px;
+  font-family: "Raleway", sans-serif;
 }
 
 .video-outer-container {
-    width: 65%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    min-width: 500px;
+  width: 65%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  min-width: 500px;
 }
 
 .video-container {
-    width: 100%;
-    padding-bottom: 56.25%;
-    position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  position: relative;
 }
 
 .control-section {
-    width: 85%;
-    display: flex;
-    flex-flow: column nowrap;
-    padding: 5px;
-    flex-shrink: 0;
-    margin-bottom: 2%;
+  width: 85%;
+  display: flex;
+  flex-flow: column nowrap;
+  padding: 5px;
+  flex-shrink: 0;
+  margin-bottom: 2%;
 }
 
 .control-element {
-    font-size: 15px;
-    padding: 10px;
-    display: flex;
-    flex-flow: row nowrap;
+  font-size: 15px;
+  padding: 10px;
+  display: flex;
+  flex-flow: row nowrap;
 }
 
 .control-element > div:nth-child(1) {
-    width: 40%;
+  width: 45%;
 }
 
 .control-element > div:nth-child(2) {
-    width: 60%;
+  width: 60%;
 }
-
+.Select-value {
+  background-color: #f2f2f2;
+}
 .Select-control {
-    width: 100% !important;
+  width: 100% !important;
 }
 
 .Select-menu-outer {
-    position: relative;
+  position: relative;
 }
 
-.has-value.Select--single > .Select-control .Select-value .Select-value-label, .has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
-    color: #606060;
+.has-value.Select--single > .Select-control .Select-value .Select-value-label,
+.has-value.is-pseudo-focused.Select--single
+  > .Select-control
+  .Select-value
+  .Select-value-label {
+  color: #606060;
 }
 
 .rc-slider-track {
-    background-color: #fa4f56;
+  background-color: #fa4f56;
 }
 
-.rc-slider-dot-active, .rc-slider-dot, .rc-slider-handle {
-    border-color: #fa4f56;
+.rc-slider-dot-active,
+.rc-slider-dot,
+.rc-slider-handle {
+  border-color: #fa4f56;
 }
 
 .rc-slider-handle:hover {
-    border-color: #fa4f56;
+  border-color: #fa4f56;
 }
 
 .img-container {
-    display: flex;
-    justify-content: flex-end;
-    height: 35px;
-    margin: 10px;
+  display: flex;
+  justify-content: flex-end;
+  height: 35px;
+  margin: 10px;
 }
 
 #logo-web {
-    height: 100%;
-    min-height: 30px;
-    width: auto;
-    margin: 2px;
+  height: 100%;
+  min-height: 30px;
+  width: auto;
+  margin: 2px;
 }
 
 #logo-mobile {
-    display: none;
+  display: none;
 }
 
 .plot-title {
-    margin-left: 5%;
-    margin-bottom: 0;
-    font-weight: 500;
+  margin-left: 5%;
+  margin-bottom: 0;
+  font-weight: 500;
 }
 
 #heatmap-confidence {
-    height: 45vh;
-    width: 100%;
+  height: 45vh;
+  width: 100%;
 }
 
 #pie-object-count {
-    height: 40vh;
-    width: 100%;
+  height: 40vh;
+  width: 100%;
 }
 
 #bar-score-graph {
-    height: 55vh;
+  height: 55vh;
 }
 
 /*
   ##Device = Most of the Smartphones Mobiles, Ipad (Portrait)
   */
 
-@media only screen and (max-width: 750px), screen and (min-width: 768px) and (max-width: 1024px) {
-    .container {
-        padding: 0;
-    }
+@media only screen and (max-width: 750px),
+  screen and (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    padding: 0;
+  }
 
-    .columns {
-        width:100% !important;
-        float:left;
-    }
+  .columns {
+    width: 100% !important;
+    float: left;
+  }
 
-    h4 {
-        font-size: 16px;
-    }
+  h4 {
+    font-size: 25px;
+  }
 
-    #header-section {
-        text-align: center;
-    }
+  #header-section {
+    text-align: center;
+  }
 
-    body {
-        font-size: 12px;
-    }
+  body {
+    font-size: 12px;
+  }
 
-    p {
-        font-size: 12px;
-    }
+  p {
+    font-size: 12px;
+  }
 
-    #learn-more-button {
-        font-size: 11px;
-        height: 20px;
-        font-weight: 400;
-        padding: 5px 25px 25px;
-        line-height: 20px;
-    }
+  #learn-more-button {
+    font-size: 11px;
+    font-weight: 400;
+    padding: 5px 20px;
+    text-transform: none;
+  }
 
-    .video-outer-container {
-        min-width: 80vw;
-        margin-top: 1.5rem;
-        margin-bottom: 1.5rem;
-    }
+  .video-outer-container {
+    min-width: 80vw;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
 
-    .control-element {
-        font-size: 12px;
-        flex-flow: column nowrap;
-        padding: 10px 0px;
-    }
+  .control-element {
+    font-size: 12px;
+    flex-flow: column nowrap;
+    padding: 10px 0px;
+  }
 
-    .control-element > div {
-        width: 100% !important;
-    }
+  .control-element > div {
+    width: 100% !important;
+  }
 
-    .control-element > div:nth-child(1) {
-        text-align: center;
-    }
+  .control-element > div:nth-child(1) {
+    text-align: center;
+  }
 
-    #slider-minimum-confidence-threshold {
-        margin-bottom: 10px;
-    }
+  #slider-minimum-confidence-threshold {
+    margin-bottom: 10px;
+  }
 
-    #div-visual-mode, #div-detection-mode {
-        text-align: center;
-    }
+  #div-visual-mode,
+  #div-detection-mode {
+    text-align: center;
+  }
 
-    .annotation-text {
-        font-size: 0.8rem !important;
-    }
+  .annotation-text {
+    font-size: 0.8rem !important;
+  }
 
-    .img-container {
-        display: none;
-    }
+  .img-container {
+    display: none;
+  }
 
-    #left-side-column {
-        height: auto;
-    }
+  #left-side-column {
+    height: auto;
+  }
 
-    #right-side-column {
-        justify-content: center;
-        margin-left:0;
-        padding: 1rem;
-    }
+  #right-side-column {
+    justify-content: center;
+    margin-left: 0;
+    padding: 1rem;
+  }
 
-    #logo-mobile {
-        display: inline-flex;
-        height: 30px;
-        align-self: flex-start;
-    }
+  #logo-mobile {
+    display: inline-flex;
+    height: 30px;
+    align-self: flex-start;
+  }
 
-    h5 {
-        font-size: 1.5rem;
-    }
+  h5 {
+    font-size: 1.5rem;
+  }
 }
