--- a/apps/dash-object-detection/assets/internal.css
+++ b/apps/dash-object-detection/assets/internal.css
@@ -127,6 +127,16 @@ p {
   position: relative;
 }
 
+.video-container > div, .video-container > div > div {
+  position: absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+}
+
 .control-section {
   width: 85%;
   display: flex;
