--- a/apps/dash-stitching/assets/base.css
+++ b/apps/dash-stitching/assets/base.css
@@ -67,7 +67,7 @@
     width: 80%; }
   .column,
   .columns {
-    margin-left: 4%; }
+    margin-left: 9%; }
   .column:first-child,
   .columns:first-child {
     margin-left: 0; }
@@ -154,6 +154,14 @@ body {
   overflow: auto;
 }
 
+#_dash-app-content>div {
+  background-color: #e9e7e7;
+}
+
+#_dash-app-content>div>div.eight.columns.result {
+  background-color: white;
+}
+
 
 
 /* Typography
@@ -162,12 +170,12 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left;
   font-weight: 300;
   font-family: 'Geneva';
-  margin-left: 4%;
+  margin-left: 9%;
 }
 
-h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 30px;}
-h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; color:rgb(214, 219, 233); margin-top: 1.8rem;}
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
+h1 { font-size: 3.2rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; color:#407DFA; margin-top: 55px;}
+h2 { font-size: 2.9rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; color:rgb(214, 219, 233); margin-top: 1.8rem;}
+h3 { font-size: 2.8rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
 h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
 h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
 h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
@@ -178,14 +186,14 @@ p {
   white-space: pre-line;
   color: #8898B2;
   overflow-wrap: normal;
-  font-size: 1.4rem;
-  margin-left: 4%;
+  font-size: 1.2rem;
+  margin-left: 9%;
 }
 
 
 label {
-  margin-top: 15px;
-  margin-left: 4%;
+  margin-top: 20px;
+  margin-left: 9%;
   color:#407DFA;
   font-family: 'Geneva'
 }
@@ -234,7 +242,7 @@ button,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  margin-left: 4%;
+  margin-left: 9%;
   height: 38px;
   width: 140px;
   padding: 0;
@@ -242,7 +250,7 @@ input[type="button"] {
   text-align: center;
   font-size: 11px;
   font-family: 'Geneva';
-  font-weight: 200;
+  font-weight: normal !important;
   letter-spacing: .1rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -251,42 +259,21 @@ input[type="button"] {
   cursor: pointer;
   box-sizing: border-box;
   border-radius: 2px;
+  
 }
 
 
 .button_instruction,
-.button_demo,
 input[type="submit"],
 input[type="reset"],
 input[type="button"] {
-  margin-left: 4%;
-  height: 38px;
-  width: 140px;
-  padding: 0;
-  color: #FBFFFF;
+  margin-left: 9%;
+  height: 34px;
+  width: 100px;
+  padding-bottom: 10px;
+  color: white;
   text-align: center;
-  font-size: 11px;
-  font-family: 'Geneva';
-  font-weight: 200;
-  line-height: 38px;
-  letter-spacing: .1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  white-space: nowrap;
-  background-color: #4181FF;
-  cursor: pointer;
-  box-sizing: border-box; 
-  border-radius: 2px;
-}
-
-.button_submit {
-  margin-left: 4%;
-  height: 38px;
-  width: 140px;
-  padding: 0;
-  color: #FBFFFF;
-  text-align: center;
-  font-size: 11px;
+  font-size: 9px;
   font-family: 'Geneva';
   font-weight: 200;
   line-height: 38px;
@@ -297,7 +284,52 @@ input[type="button"] {
   background-color: #4181FF;
   cursor: pointer;
   box-sizing: border-box;
-  
+  border-radius: 2px;
+  border:transparent !important;
+}
+
+
+.button_demo {
+  height: 34px;
+  width: 115px;
+  padding-bottom: 10px;
+  color: white;
+  text-align: center;
+  font-size: 9px;
+  font-family: 'Geneva';
+  font-weight: 200;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: green;
+  cursor: pointer;
+  box-sizing: border-box;
+  border-radius: 2px;
+  border:transparent !important;
+}
+
+.button_submit {
+  margin-left: 9%;
+  height: 38px;
+  width: 110px;
+  padding: 0;
+  color: white;
+  text-align: center;
+  font-size: 9px;
+  font-family: 'Geneva';
+  font-weight: 200;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #4181FF;
+  cursor: pointer;
+  box-sizing: border-box;
+  border:transparent !important;
+  margin-bottom: 35px;
 }
 
 
@@ -313,21 +345,11 @@ input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
   color: #333;
-  border-color: #888;
   outline: 0; 
 }
 
 
 
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; 
-}
 
 
 .button.button-primary:hover,
@@ -343,6 +365,33 @@ input[type="button"].button-primary:focus {
   color: #FFF;
   background-color: #1EAEDB;
   border-color: #1EAEDB; 
+}
+
+
+
+/* Canvas Div */
+#_dash-app-content>div>div.eight.columns.result {
+  margin-left: 35px;
+}
+
+
+/* Selection tabs */
+
+#stitching-tabs>div:nth-child(1),
+#stitching-tabs>div:nth-child(2),
+#stitching-tabs>div:nth-child(3) {
+  background-color: white;
+  border-color: transparent;
+}
+
+#stitching-tabs>div.jsx-2137964197.tab.tab--selected {
+  color: #4181FF !important;
+  border-top-color: initial !important;
+  background-color: white;
+}
+
+#stitching-tabs>div:nth-child(3)>span {
+  font-size: smaller;
 }
 
 
@@ -384,7 +433,7 @@ input[type="button"].button-primary:focus {
 
 /*Estimate Translation */
 #tabs-content-example>div>button:nth-child(9) {
-  margin-right: 20%;
+  margin-left: 0;
   height: 38px;
   width: 200px;
   padding: 0;
@@ -399,7 +448,7 @@ input[type="button"].button-primary:focus {
   text-decoration: none;
   white-space: nowrap;
   background-color: #4181FF;
-  border-radius: 30px;
+  border-radius: 4px;
   border: 1px solid;
   cursor: pointer;
   box-sizing: border-box;
@@ -434,14 +483,12 @@ input[type="button"].button-primary:focus {
 
 
 #stitching-result {
-  margin-left: -35px;
+  
   text-align: left;
   
 }
 
-#bla {
-  margin-left: -35px;
-}
+
 
 .result_slider {
   width: 70%;
@@ -466,13 +513,13 @@ input[type="password"],
 textarea,
 select {
   
-  margin-left: 4%;
-  height: 38px;
-  width: 70%;
+  margin-left: 9%;
+  height: 30px;
+  width: 50%;
   box-sizing: border-box;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: transparent;
-  border: 1px solid #D1D1D1;
+  border: 1px solid #8898B2;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; 
@@ -659,9 +706,9 @@ there.
   }
 
   h1 {
-    font-size: 6.5rem;
-    margin-top: 20px;
+    font-size: 5.5rem;
     margin-bottom: 2rem;
+    margin-top: 60px;
   }
 
   p {
@@ -690,7 +737,6 @@ there.
   
 
   .button_instruction,
-  .button_demo,
   input[type="submit"],
   input[type="reset"],
   input[type="button"] {
@@ -716,6 +762,28 @@ there.
     margin-top: -20px;
     margin-bottom: -50px;
 
+  }
+
+  .button_demo {
+    margin-left: 0 !important;
+    height: 34px;
+    width: 115px;
+    padding-bottom: 10px;
+    color: white;
+    text-align: center;
+    font-size: 9px;
+    font-family: 'Geneva';
+    font-weight: 200;
+    line-height: 38px;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: green;
+    cursor: pointer;
+    box-sizing: border-box;
+    border-radius: 2px;
+    border: transparent !important;
   }
 
 
@@ -792,6 +860,22 @@ there.
     margin: 0 auto;
     text-align: center;
     margin-left: 0;
+  }
+
+  /* Canvas Div */
+  #_dash-app-content>div>div.eight.columns.result {
+    margin-left: 0;
+  }
+
+  #table-stitch>div {
+    margin-left: 1.2px !important;
+  }
+
+  #stitching-tabs>div:nth-child(1),
+  #stitching-tabs>div:nth-child(2),
+  #stitching-tabs>div:nth-child(3) {
+    background-color: white;
+    border-color: gray;
   }
 
   #tabs-content-example>div {
@@ -908,6 +992,7 @@ there.
     width: 30px !important;
 
   }
+
   
   /*Estimate Translation Button*/
   #tabs-content-example>div>button:nth-child(9) {
