--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -17,16 +17,15 @@ body {
 .pretty_container {
   border-radius: 5px;
   background-color: white;
-  margin: 10px;
-  padding: 15px;
+  margin: 0.5rem;
+  padding: 1rem;
   position: relative;
   box-shadow: 2px 2px 2px lightgrey;
 }
 
 input {
-  padding: 5px;
+  padding: 0.5rem 0;
   border-radius: 5px;
-  font-size: 18px;
 }
 
 .button {
