Add new dash logo, hide modebar on ternary map and add padding to dropdown

--- a/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
+++ b/apps/dash-oil-gas-ternary/assets/oil-and-gas-ternary.css
@@ -137,6 +137,11 @@
     max-height: 20rem;
 }
 
+#operator-select .Select-control{
+    padding: 1rem;
+}
+
+
 /* Top-row-graphs
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 #top-row-graphs {
